created http api

--- a/Hirakana WatchKit Extension/Info.plist
+++ b/Hirakana WatchKit Extension/Info.plist
@@ -50,5 +50,10 @@
 	<string>$(PRODUCT_MODULE_NAME).ExtensionDelegate</string>
 	<key>WKWatchOnly</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
