--- a/Hirakana.xcodeproj/xcshareddata/xcschemes/Hirakana WatchKit App.xcscheme
+++ b/Hirakana.xcodeproj/xcshareddata/xcschemes/Hirakana WatchKit App.xcscheme
@@ -38,8 +38,8 @@
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
-      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
-      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      selectedDebuggerIdentifier = ""
+      selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
@@ -54,7 +54,7 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES"
-      notificationPayloadFile = "Hirakana WatchKit Extension/PushNotificationPayload.apns">
+      notificationPayloadFile = "Hirakana WatchKit Extension/Resources/PushNotificationPayload.apns">
       <RemoteRunnable
          runnableDebuggingMode = "2"
          BundleIdentifier = "com.apple.Carousel"
