create two schemes; debug and release

--- a/Unidioma.xcodeproj/xcshareddata/xcschemes/Unidioma Watch App (Debug).xcscheme
+++ b/Unidioma.xcodeproj/xcshareddata/xcschemes/Unidioma Watch App (Debug).xcscheme
@@ -69,11 +69,12 @@
       </RemoteRunnable>
    </LaunchAction>
    <ProfileAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      debugDocumentVersioning = "YES">
+      debugDocumentVersioning = "YES"
+      notificationPayloadFile = "Unidioma WatchKit Extension/Resources/PushNotificationPayload.apns">
       <RemoteRunnable
          runnableDebuggingMode = "2"
          BundleIdentifier = "com.apple.Carousel"
@@ -100,7 +101,7 @@
       buildConfiguration = "Debug">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
